Banking App/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apex-banking
  labels:
    name: apex-banking
    environment: production
