Banking App/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apex-api
  namespace: apex-banking
  labels:
    app: apex-api
    tier: backend
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: apex-api
      tier: backend
  template:
    metadata:
      labels:
        app: apex-api
        tier: backend
    spec:
      serviceAccountName: apex-api-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: api
          image: ghcr.io/kartel07/apex-banking-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: apex-api
  namespace: apex-banking
  labels:
    app: apex-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: apex-api
    tier: backend
