Banking App/k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apex-redis
  namespace: apex-banking
  labels:
    app: apex-redis
    tier: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apex-redis
      tier: cache
  template:
    metadata:
      labels:
        app: apex-redis
        tier: cache
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
              protocol: TCP
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: apex-redis
  namespace: apex-banking
  labels:
    app: apex-redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: apex-redis
    tier: cache
