Banking App/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apex-banking-ingress
  namespace: apex-banking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - banking.example.com
      secretName: apex-banking-tls
  rules:
    - host: banking.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apex-api
                port:
                  number: 5000
